--- a/Lesson5/Ex02.html
+++ b/Lesson5/Ex02.html
@@ -4,31 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS_Practice_HVT</title>
+    <script src="js/scripEx02.js"></script>
 </head>
-<script>
-    //  <!-- Arrow function -->
-    Hello = () => {
-        let a = 10, b = 20;
-        console.log(a + b);
-    }
-    Hello();
-
-
-    //Array
-    var arrNum = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
-    console.log("Length of array :" + arrNum.length + '' + "Phần tử thứ 7 trong mảng :" + arrNum[7]);
-
-    //Xóa phần tử trong array
-    arrNum.splice(5, 1);
-    console.log(arrNum);
-    //Nhân 3 phaananf tử trong mảng với Map Js
-    const map1 = arrNum.map(z => z * 3);
-    console.log(map1);
-</script>
-
 <body>
-
+    <h1>Ex02_HVT</h1>
 </body>
 
 </html>
